--- a/MadridAirbnb.Rmd
+++ b/MadridAirbnb.Rmd
@@ -4,7 +4,7 @@ output: html_notebook
 ---
 
  
-Ερώτηση:Να βρεθεί ο host_name με τα περισσότερα listings (σε απόλυτο αριθμό)(Μονάδες 10)
+Ερώτηση:Να βρεθεί ο host_name με τα περισσότερα listings (σε απόλυτο αριθμό)
 ```{r}
 
 #ok
@@ -24,7 +24,7 @@ listings%>%
 
 ```
 
-Ερώτηση:Τι ποσοστό των host είναι superhost;(Μονάδες 10)
+Ερώτηση:Τι ποσοστό των host είναι superhost;
 ```{r}
 #ok
 
@@ -43,7 +43,7 @@ listings_detailed%>%
 
 ```
 
-Ερώτηση:Nα βρείτε τα ονόματα των καταλυμάτων τα οποία επισκέφτηκε ο χρήστης με τα περισσότερα reviews(Μονάδες 10)
+Ερώτηση:Nα βρείτε τα ονόματα των καταλυμάτων τα οποία επισκέφτηκε ο χρήστης με τα περισσότερα reviews
 ```{r}
 #tha xexwrisoume ton kathe xrhsth me thn metavlhth id apo to dataset reviews_detailed
 #vlepw oti uparxoun 20836 diaforetika id
@@ -71,7 +71,7 @@ a4%>%
   
 ```
 
-Ερώτηση:Με βάση τα στοιχεία του πίνακα reviews_detailed να βρείτε το πιο δημοφιλές κατάλυμα(συνολικός αριθμός reviews) και το όνομα του ατόμου που το οποίο πραγματοποίησε τις περισσότερες κριτικές για αυτό. (Μονάδες 10)
+Ερώτηση:Με βάση τα στοιχεία του πίνακα reviews_detailed να βρείτε το πιο δημοφιλές κατάλυμα(συνολικός αριθμός reviews) και το όνομα του ατόμου που το οποίο πραγματοποίησε τις περισσότερες κριτικές για αυτό. 
 ```{r}
 
 #ok
@@ -97,7 +97,7 @@ reviews_detailed%>%
 ```
 
 
-Ερώτηση:Ποιος μήνας από τους καταγραφόμενους(βλέπετε πίνακας calendar) είχε τα περισσότερα διαθέσιμα δωμάτια; (Μονάδες 10)
+Ερώτηση:Ποιος μήνας από τους καταγραφόμενους(βλέπετε πίνακας calendar) είχε τα περισσότερα διαθέσιμα δωμάτια; 
 ```{r}
 #ok
 
@@ -122,7 +122,7 @@ calendar%>%
 slice(1)
 ```
 
-Ερώτηση:Βάση του πίνακα calendar και του reviews_detailed να βρείτε τα μέσα κέρδη(συνολικά έσοδα/πλήθος κατηγορίας) των καταλυμάτων ως προς τις κατηγορίες της στήλης host_response_time (Μονάδες 10)
+Ερώτηση:Βάση του πίνακα calendar και του reviews_detailed να βρείτε τα μέσα κέρδη(συνολικά έσοδα/πλήθος κατηγορίας) των καταλυμάτων ως προς τις κατηγορίες της στήλης host_response_time 
 ```{r}
 #h sthlh host_response_time vrisketai sto dataset listings_detailed
 
@@ -154,7 +154,7 @@ b5%>%
   mutate(v5=(meaninc1+meaninc2)/2)
 ```
 
-Ερώτηση:Να βρείτε τις μέσες τιμές(κόστος καταλύματος) για καταλύματα τύπου Entire home/apt τα οποία είχαν διαθεσιμότητα λιγότερο από 20 μέρες τον χρόνο (Μονάδες 5)
+Ερώτηση:Να βρείτε τις μέσες τιμές(κόστος καταλύματος) για καταλύματα τύπου Entire home/apt τα οποία είχαν διαθεσιμότητα λιγότερο από 20 μέρες τον χρόνο 
 ```{r}
 #ok
 
@@ -170,7 +170,7 @@ listings%>%
 
 ```
 
-Ερώτηση:Να βρείτε την μέση τιμή καταλυμάτων τύπου Entire home/apt στην περιοχή (neighbourhood_group) Arganzuela (Μονάδες 5)
+Ερώτηση:Να βρείτε την μέση τιμή καταλυμάτων τύπου Entire home/apt στην περιοχή (neighbourhood_group) Arganzuela 
 ```{r}
 
 #ok
@@ -199,7 +199,7 @@ meshtimh
   
 ```
 
-Ερώτηση:Να βρείτε τον συνολικό αριθμό reviews ανά έτος.Υπάρχει κάποιου είδους συσχέτιση του αριθμού των reviews με τον χρόνο;Να το δείξτε μέσω κατάλληλου διαγράμματος (Μονάδες 15)
+Ερώτηση:Να βρείτε τον συνολικό αριθμό reviews ανά έτος.Υπάρχει κάποιου είδους συσχέτιση του αριθμού των reviews με τον χρόνο;Να το δείξτε μέσω κατάλληλου διαγράμματος 
 ```{r}
 #ok
 
